# rofi-todoist

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.circleci/: config.yml
src/: main.rs  rofi.rs  todoist.rs
